      to be obtained from its development repo).

    * Added debug prints for two probably legitimate situations where socket
      errors are ignored when the server closes or resets the connection.
      These debug prints can be enabled via the `debug` instance variable
      of the WBEMConnection object; they are targeted at development for
      investigating these situations.


pywbem-0.8.3  2016-04-15

  BUG FIXES:

    * To address some M2Crypto issues, upgraded to use M2Crypto >=0.24 from
      PyPI.

    * For Windows, using M2CryptoWin32/64 >=0.21 from PyPI, in order to
      avoid the Swig-based build in Windows.

    * Improved the mechanism to build the LEX/YACC table modules, so that
      import errors for freshly installed packages (e.g. M2Crypto) no longer
      occur.

  ENHANCEMENTS:

    * Added Windows versions of WBEM utility commands: wbemcli.bat,
      mof_compiler.bat.


pywbem-0.8.2  2016-03-20

  BUG FIXES:

    * Eliminated dependency on "six" package during installation of pywbem.
      (Andreas Maier)

  DEPENDENCIES:

    * v0.8.x has the following dependencies on other PyPI packages
      (see 'install_requires' argument in setup script):
        - M2Crypto
        - ply
        - six
      

pywbem-0.8.1  2016-03-18

  KNOWN ISSUES:

    * Installing PyWBEM on Python 2.6 has a conflict with the 'pbr' package
      from PyPI, resulting in a TypeError: "dist must be a Distribution
      instance". This issue is specific to Python 2.6 and does not occur in
      any of the other supported Python versions (2.7, 3.4, 3.5). This issue
      can be mitigated by uninstalling the 'pbr' package, or if that is not
      possible, by migrating to Python 2.7. See issue #26 on GitHub.

    * MOF using names that are reserved keywords will fail to compile in the
      MOF compiler. For example, a CIM property named 'indication'. See issue
      #62 on GitHub.

    * The Pulled Enumeration Operations introduced in DSP0200 1.3 are not